Add link to studies, correct closing bug

--- a/index.html
+++ b/index.html
@@ -39,13 +39,25 @@
                 id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#about">About</a>
+                        <a
+                            data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1"
+                            href="#about"
+                        >About</a>
                     </li>
                     <li>
-                        <a href="#science">Science</a>
+                        <a
+                            data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1"
+                            href="#science"
+                        >Science</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a
+                            data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1"
+                            href="#contact"
+                        >Contact</a>
                     </li>
                 </ul>
             </div>
@@ -93,6 +105,9 @@
             After much trial and error, we have found something that
             really works for us. Try it and you will know immediately
             if it works for you too.
+            To read more about the incredible potential of
+            <i>Hericium erinaceus</i> in particular,
+            <a href="hericium-science.html">click here</a>.
             </p>
         </div>
 
